--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap" rel="stylesheet">
 
-    <title>Dev Server</title>
+    <meta name="description" content="My Portfolio">
+    <meta name="keywords" content="java programmer, HTML, CSS, JavaScript and SQL">
+
+
+    <title>My Portfolio</title>
   </head>
   <body>
     <header class="header container">
@@ -26,7 +30,7 @@
           </li>
           <li class="header__line"></li>
           <li>
-            <button id = "theme-toggle" class="header__sun">
+            <button aria-label="theme-toggle btn" id = "theme-toggle" class="header__sun">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" >
                 <path d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.166a.75.75 0 0 0-1.06-1.06l-1.591 1.59a.75.75 0 1 0 1.06 1.061l1.591-1.59ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5H21a.75.75 0 0 1 .75.75ZM17.834 18.894a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 1 0-1.061 1.06l1.59 1.591ZM12 18a.75.75 0 0 1 .75.75V21a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.758 17.303a.75.75 0 0 0-1.061-1.06l-1.591 1.59a.75.75 0 0 0 1.06 1.061l1.591-1.59ZM6 12a.75.75 0 0 1-.75.75H3a.75.75 0 0 1 0-1.5h2.25A.75.75 0 0 1 6 12ZM6.697 7.757a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 0 0-1.061 1.06l1.59 1.591Z" />
               </svg>
@@ -36,7 +40,7 @@
             <a class="header__resume btn"  href="https://drive.google.com/file/d/1ITRS7lmPi-mUWKNI0Dhz7rP5HPm-LNE5/view?usp=sharing" target="_blank" >Resume</a>
           </li>
         </ul>
-        <button class="header__bars">
+        <button aria-label = "mobile nav button" class="header__bars">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" >
             <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
           </svg>
@@ -60,7 +64,7 @@
           </li>
           <li class="mobile-nav__link-line"></li>
           <li>
-            <button id = "theme-toggle" class="mobile-nav__sun">
+            <button aria-label="theme-toggle btn"  id = "theme-toggle" class="mobile-nav__sun">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" >
                 <path d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.166a.75.75 0 0 0-1.06-1.06l-1.591 1.59a.75.75 0 1 0 1.06 1.061l1.591-1.59ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5H21a.75.75 0 0 1 .75.75ZM17.834 18.894a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 1 0-1.061 1.06l1.59 1.591ZM12 18a.75.75 0 0 1 .75.75V21a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.758 17.303a.75.75 0 0 0-1.061-1.06l-1.591 1.59a.75.75 0 0 0 1.06 1.061l1.591-1.59ZM6 12a.75.75 0 0 1-.75.75H3a.75.75 0 0 1 0-1.5h2.25A.75.75 0 0 1 6 12ZM6.697 7.757a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 0 0-1.061 1.06l1.59 1.591Z" />
               </svg>
@@ -110,9 +114,9 @@
           <h3 class="about__subtitle">Skills</h3>
           <div class="about__ul-container">
             <ul class="about__ul">
-              <li class="about__list">HTML</li>
-              <li class="about__list">CSS</li>
-              <li class="about__list">JavaScript</li>
+              <li class="about__list">Java</li>
+              <li class="about__list">Problem Solving (DSA) </li>
+              <li class="about__list">HTML, CSS and JS</li>
             </ul>
             <ul class="about__ul">
               <li class="about__list">SQL and PowerBI</li>
@@ -132,7 +136,7 @@
         <div class="featured__wrapper">
 
           <h2 class="featured__title">Kora Karnival</h2>
-          <a class="featured__link" href="https://korafoodstreet.com/" target="_blank">
+          <a aria-label="link featured projects" class="featured__link" href="https://korafoodstreet.com/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 0 1 1.242 7.244l-4.5 4.5a4.5 4.5 0 0 1-6.364-6.364l1.757-1.757m13.35-.622 1.757-1.757a4.5 4.5 0 0 0-6.364-6.364l-4.5 4.5a4.5 4.5 0 0 0 1.242 7.244" />
             </svg>
