--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn"  href="https://drive.google.com/file/d/1hWQ04UgtDlkOBHKSo3DbLPUt00m6opfp/view?usp=sharing" target="_blank" >Resume</a>
+            <a class="header__resume btn"  href="https://www.canva.com/design/DAF4MhooTeQ/sdTDOVqd964KgfSgy1O17g/view#1" target="_blank" >Resume</a>
           </li>
         </ul>
         <button aria-label = "mobile nav button" class="header__bars">
