--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="https://drive.google.com/file/d/1ITRS7lmPi-mUWKNI0Dhz7rP5HPm-LNE5/view?usp=sharing" target="_blank" >Resume</a>
+            <a class="mobile-nav__btn btn" href="https://www.canva.com/design/DAF4MhooTeQ/sdTDOVqd964KgfSgy1O17g/view#1" target="_blank" >Resume</a>
           </li>
         </ul>
         <button class="header__bars">          
