added simon site

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ ensuring optimal functionality across the organization.
               <p class="work__project-description2">
                 Got some deep understanding about DOM functions and grasped some concepts along the way 
               </p>
-              <a class = "btn work__project-btn" href="https://github.com/sriramongithub/Personal-Projects/tree/main/Simon%20Game" target="_blank">Source Code</a>
+              <a class = "btn work__project-btn" href="http://simon-game-self.vercel.app" target="_blank">Visit site</a>
             </div>
   
             <!-- Project4 -->
