added drum-kit site

--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@ ensuring optimal functionality across the organization.
             </div>
             <div class="work__project work__content4" >
             <p class="work__project-description1">
-              Drum Kit is a music website corresponding to the keys
+              Drum Kit is a music website when a key is clicked it plays sound to the corresponding key.
             </p>
             <p class="work__project-description2">
               Learned about event Listeners and was introduced to methods when starting as programmer.
             </p>
-            <a class = "btn work__project-btn" href="https://github.com/sriramongithub/Personal-Projects/tree/main/Drum%20Kit" target="_blank">Source Code</a>
+            <a class = "btn work__project-btn" href="https://drum-kit-chi-ten.vercel.app/" target="_blank">Visit site</a>
             </div>
         </div>                
       </section>
