Made Major Changes

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
         <img class = "hero__img" src="/DP.jpg" alt="Profile picture">
         <h2 class="hero__subtitle">Hi, I'm Sriram 👋</h2>
-        <h1 class="hero__title">Java<br>Programmer</h1>
+        <h1 class="hero__title">System<br>Administrator</h1>
         <p class = "hero__description">
-          An <strong>Engineering graduate</strong> , I am passionate about leveraging the power of the Java programming language to develop innovative and efficient solutions.
+          A <strong>Recent graduate</strong> with a Bachelor’s degree in Information Technology, specialized in system administration and network management
          </p>
         <a class = "hero__btn btn" href="mailto:sriramnewly@gmail.com" target="_blank">Reach out</a>
 
@@ -103,19 +103,19 @@
           <p class="about__description">
             An <strong>Engineering graduate</strong> constantly learning and adopting new technologies always question everything around him to extend his creativity
           <p class="about__description">
-            People who know me say I'm obsessed, that's fair, I am very driven and love
-            learning new things and new technologies.
+            Possesses a foundational understanding of Windows and Linux server environments, network configuration, and system security measures. Adept at problem-solving and technical troubleshooting, complemented by strong analytical skills and a commitment to maintaining high-quality system performance. Proactive and eager to learn, I am looking to leverage my academic knowledge and internship experience in a dynamic team to contribute effectively as a System Administrator and a Programmer too.
           </p>
+          
           <p class="about__description">
             Here is my <a href="https://leetcode.com/sriramonleetcode/" target="_blank" >Leetcode progress</a>
             and grasped some of Java concepts in <a href="https://hackerrank.com/profile/sriramnewly" target="_blank">Hackerrank platform.</a>
           </p>
           <hr class="about__hr">
-          <h3 class="about__subtitle">Skills</h3>
+          <h3 class="about__subtitle">Skills and application environments</h3>
           <div class="about__ul-container">
             <ul class="about__ul">
-              <li class="about__list">Java</li>
-              <li class="about__list">Problem Solving (DSA) </li>
+              <li class="about__list">VMware and Hyper-V</li>
+              <li class="about__list">Java and DSA</li>
               <li class="about__list">HTML, CSS and JS</li>
             </ul>
             <ul class="about__ul">
@@ -135,8 +135,8 @@
         <h3 class="featured__subtitle">Projects worked on </h3>
         <div class="featured__wrapper">
 
-          <h2 class="featured__title">Kora Karnival</h2>
-          <a aria-label="link featured projects" class="featured__link" href="https://korafoodstreet.com/" target="_blank">
+          <h2 class="featured__title">Kora Karnival as System Administrator</h2>
+          <a aria-label="link featured projects" class="featured__link" href="https://drive.google.com/file/d/1rjjwgR9qn57GVIR88MLjWV_0yRj0e_fJ/view?usp=sharing" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 0 1 1.242 7.244l-4.5 4.5a4.5 4.5 0 0 1-6.364-6.364l1.757-1.757m13.35-.622 1.757-1.757a4.5 4.5 0 0 0-6.364-6.364l-4.5 4.5a4.5 4.5 0 0 0 1.242 7.244" />
             </svg>
