Added New resume made some website changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn"  href="https://drive.google.com/file/d/178tNH_SADCJ1ccwac537FJTfR3zHo5-F/view?usp=sharing" target="_blank" >Resume</a>
+            <a class="header__resume btn"  href="https://drive.google.com/file/d/1CfHQNOD8w-kV90u5p2H_11B9uvCujtIh/view?usp=sharing" target="_blank" >Resume</a>
           </li>
         </ul>
         <button aria-label = "mobile nav button" class="header__bars">
@@ -71,7 +71,7 @@
             </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="https://drive.google.com/file/d/178tNH_SADCJ1ccwac537FJTfR3zHo5-F/view?usp=sharing" target="_blank" >Resume</a>
+            <a class="mobile-nav__btn btn" href="https://drive.google.com/file/d/1CfHQNOD8w-kV90u5p2H_11B9uvCujtIh/view?usp=sharing" target="_blank" >Resume</a>
           </li>
         </ul>
         <button class="header__bars">          
@@ -90,7 +90,14 @@
         <h2 class="hero__subtitle">Hi, I'm Sriram 👋</h2>
         <h1 class="hero__title">System<br>Administrator</h1>
         <p class = "hero__description">
-          A <strong>Recent graduate</strong> with a Bachelor’s degree in Information Technology, specialized in system administration and network management
+          A <strong>Recent graduate</strong> with a Bachelor’s degree in Technology specialized in Information Technology. Aspiring to become a <strong>DevOps Engineer</strong>, I'm passionate about automating workflows and optimizing system performance.
+
+
+
+
+
+
+
          </p>
         <a class = "hero__btn btn" href="mailto:sriramnewly@gmail.com" target="_blank">Reach out</a>
 
@@ -101,27 +108,27 @@
         <div class="about__content">
           <h2 class="about__title">About</h2>
           <p class="about__description">
-            An <strong>Engineering graduate</strong> constantly learning and adopting new technologies always question everything around him to extend his creativity
+            An <strong>Engineering graduate</strong> constantly learning and adopting new technologies, always questioning everything around him to expand his creativity.
           <p class="about__description">
-            Possesses a foundational understanding of Windows and Linux server environments, network configuration, and system security measures. Adept at problem-solving and technical troubleshooting, complemented by strong analytical skills and a commitment to maintaining high-quality system performance. Proactive and eager to learn, I am looking to leverage my academic knowledge and internship experience in a dynamic team to contribute effectively as a System Administrator and a Programmer too.
+            Possesses a foundational understanding of Windows and Linux server environments, network configuration, and system security measures. Adapt at problem-solving and technical troubleshooting, complemented by strong analytical skills and a commitment to maintaining high-quality system performance. Proactive and eager to learn, I am looking to leverage my academic knowledge and internship experience in a dynamic team to contribute effectively as a System Administrator and a Programmer too.
           </p>
           
           <p class="about__description">
             Here is my <a href="https://leetcode.com/sriramonleetcode/" target="_blank" >Leetcode progress</a>
-            and grasped some of Java concepts in <a href="https://hackerrank.com/profile/sriramnewly" target="_blank">Hackerrank platform.</a>
+            and grasped some of programming concepts in <a href="https://hackerrank.com/profile/sriramnewly" target="_blank">Hackerrank platform.</a>
           </p>
           <hr class="about__hr">
-          <h3 class="about__subtitle">Skills and application environments</h3>
+          <h3 class="about__subtitle">Technical Skills</h3>
           <div class="about__ul-container">
             <ul class="about__ul">
-              <li class="about__list">VMware and Hyper-V</li>
-              <li class="about__list">Java and DSA</li>
-              <li class="about__list">HTML, CSS and JS</li>
+              <li class="about__list">DevOps Tools</li>
+              <li class="about__list">Programming</li>
+              <li class="about__list">Artificial Intelligence</li>
             </ul>
             <ul class="about__ul">
-              <li class="about__list">SQL and PowerBI</li>
-              <li class="about__list">C# and Python</li>
-              <li class="about__list">Git Hub Version Control</li>
+              <li class="about__list">Database Management</li>
+              <li class="about__list">Network Administration</li>
+              <li class="about__list">Computer Skills</li>
             </ul>
             </div>
         </div>
@@ -144,12 +151,11 @@
           </a>
         </div>
         <p class="featured__description">
-          Provided essential support in managing and maintaining the company's IT infrastructure,
-including servers, networks, and workstations.
+          Managed IT infrastructure, including servers, networks, and workstations; assisted with hardware and software configuration, troubleshooting, and disk partitioning.
         </p>
         <p class="featured__description">
-          Assisted in configuring, installing, and troubleshooting hardware and software systems,
-ensuring optimal functionality across the organization.
+          Oversaw user account management, including creation, modification, and deactivation, ensuring compliance with
+security protocols.
 
         </p>
 
@@ -157,11 +163,11 @@ ensuring optimal functionality across the organization.
           <div>
             <h3 class="featured__label">Skills Acquired</h3>
             <ul class="featured__tech-stack">
-              <li class="featured__info">Patience</li>
               <li class="featured__info">OS Installation</li>
               <li class="featured__info">Storage partition</li>
               <li class="featured__info">Troubleshooting</li>
               <li class="featured__info">understanding of real-time servers</li>
+              <li class="featured__info">Patience</li>
             </ul>
           </div>
           <div>
