--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <section class="hero container">
 
-        <img class = "hero__img" src="/DP.jpg" alt="Profile picture">
+        <img class = "hero__img" src="/DP.png" alt="Profile picture">
         <h2 class="hero__subtitle">Hi, I'm Sriram 👋</h2>
         <h1 class="hero__title">Tech<br>Explorer</h1> 
         <p class = "hero__description">
